crates/xlate/tests/snapshots/golden_matrix__instr_store_chain__gpt-4o-mini__20260910__responses_to_chat__gpt5_responses.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-5.4",
  "messages": [
    {
      "role": "system",
      "content": "Always answer only in French."
    },
    {
      "role": "user",
      "content": "Remember the number 42."
    }
  ],
  "max_completion_tokens": 64,
  "store": true
}
--- headers ---
upstream_streams: false
--- degraded ---
