crates/xlate/tests/snapshots/golden_matrix__instr_store_chain__gpt-4o-mini__20260910__responses_to_chat__openai_compatible.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "llama-x",
  "messages": [
    {
      "role": "system",
      "content": "Always answer only in French."
    },
    {
      "role": "user",
      "content": "Remember the number 42."
    }
  ],
  "max_tokens": 64
}
--- headers ---
upstream_streams: false
--- degraded ---
store=dropped
